<?xml version="1.0"?>
<package format="3">
  <name>phidgets_hardware</name>
  <version>0.0.1</version>
  <description>ros2_control hardware interface for Phidgets BLDC motor using Phidget22 C API</description>

  <maintainer email="you@todo.com">you</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>controller_manager</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <!-- Needed for teleop and cmd_vel -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>joy</depend>

  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>

    <!-- REQUIRED so ros2_control can load your hardware plugin -->
    <pluginlib plugin="${prefix}/phidgets_hardware_plugin.xml"/>
  </export>

</package>
